[project]
name = "backgroud-removal-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "einops>=0.8.1",
    "gradio>=5.49.1",
    "gradio-imageslider>=0.0.20",
    "huggingface-hub>=0.36.0",
    "kornia>=0.8.2",
    "loadimg>=0.1.1",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "prettytable>=3.17.0",
    "scikit-image>=0.25.2",
    "spaces>=0.42.1",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "transformers>=4.39.1",
    "typing>=3.10.0.0",
]
